--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,21 @@
-Keras>=2
-numpy>=1.12.1
-nilearn>=0.3.0
-tables>=3.4.2
-nibabel>=2.1.0
+backports.statistics==0.1.0
+Cython==0.29.24
+dl==0.1.0
+ipaddr==2.2.0
+Keras==2.4.3
+keyring==21.2.1
+matplotlib==3.4.3
+mypy_extensions==0.4.3
+nibabel==3.2.1
+nilearn==0.8.1
+nipype==1.7.0
+numpy==1.21.2
+ordereddict==1.1
+pandas==1.3.3
+pyDOE==0.3.8
+pywin32==228
+scipy==1.5.2
+SimpleITK==2.1.1
+tables==3.6.1
+tensorflow==2.3.1
+wincertstore==0.2.1
