--- a/requirements.txt
+++ b/requirements.txt
@@ -13,9 +13,9 @@ numpy==1.21.2
 ordereddict==1.1
 pandas==1.3.3
 pyDOE==0.3.8
-pywin32==228
+-- pywin32==228
 scipy==1.5.2
 SimpleITK==2.1.1
 tables==3.6.1
 tensorflow==2.3.1
-wincertstore==0.2.1
+-- wincertstore==0.2.1
